created filters, auth, recipe instructions, modals

--- a/src/recipes/components/Overview/OverviewSection.css
+++ b/src/recipes/components/Overview/OverviewSection.css
@@ -1,3 +1,7 @@
 .overview-section {
-    background-color: violet;
+    /* background-color: violet; */
+}
+
+.recipe-profile-link {
+   font-size: small; 
 }
