--- a/client/src/user/containers/UserProfile.css
+++ b/client/src/user/containers/UserProfile.css
@@ -1,3 +1,17 @@
+.user-profile-container {
+  display: flex;
+  padding: 20px;
+}
+
+.profile-info-column {
+  width: 30%;
+  background-color: white;
+}
+
+.profile-recipes-column  {
+  width: 70%;
+}
+
 /* Create two unequal columns that floats next to each other
 .profile-info-column {
     float: left;
