connecting backend with frontend

--- a/client/src/shared/components/Auth.css
+++ b/client/src/shared/components/Auth.css
@@ -1,4 +1,21 @@
-.App {
+.authentication__header {
+  color: white;
+  text-align: center;
+}
+
+.authentication {
+  width: 90%;
+  max-width: 25rem;
+  margin: 7rem auto;
+  text-align: center;
+}
+
+.authentication form {
+  margin-bottom: 1rem;
+}
+
+
+/* .App {
     font-family: sans-serif;
   }
   
@@ -54,4 +71,4 @@
     background-color: white;
     color: rgb(70, 153, 179);
   }
-  
+   */
