--- a/client/src/recipes/containers/NewRecipe.css
+++ b/client/src/recipes/containers/NewRecipe.css
@@ -1,4 +1,10 @@
 .new-recipe-form {
+    list-style: none;
     margin: 0 auto;
-    width: 80%;
+    padding: 1rem;
+    width: 90%;
+    max-width: 40rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 6px;
+    background: white;
 }
